--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -30,7 +30,9 @@
   border-radius: 8px;
   border: none;
 }
-
+.btn-submit:hover {
+  background-color: orange;
+}
 @media only screen and (max-width: 768px) {
   div.col-4 {
     width: 300px;
